// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VPagination.ts emits an event when next or previous is clicked 1`] = `
<nav role="navigation"
     aria-label="Pagination Navigation"
>
  <ul class="v-pagination theme--light">
    <li>
      <button class="v-pagination__navigation"
              type="button"
              aria-label="Previous page"
      >
        <i class="v-icon notranslate mdi mdi-chevron-left theme--light"
           aria-hidden="true"
        >
        </i>
      </button>
    </li>
    <li>
      <button class="v-pagination__item"
              type="button"
              aria-current="false"
              aria-label="Goto Page 1"
      >
        1
      </button>
    </li>
    <li>
      <button class="v-pagination__item v-pagination__item--active primary"
              type="button"
              aria-current="true"
              aria-label="Current Page, Page 2"
      >
        2
      </button>
    </li>
    <li>
      <button class="v-pagination__item"
              type="button"
              aria-current="false"
              aria-label="Goto Page 3"
      >
        3
      </button>
    </li>
    <li>
      <button class="v-pagination__item"
              type="button"
              aria-current="false"
              aria-label="Goto Page 4"
      >
        4
      </button>
    </li>
    <li>
      <button class="v-pagination__item"
              type="button"
              aria-current="false"
              aria-label="Goto Page 5"
      >
        5
      </button>
    </li>
    <li>
      <button class="v-pagination__navigation"
              type="button"
              aria-label="Next page"
      >
        <i class="v-icon notranslate mdi mdi-chevron-right theme--light"
           aria-hidden="true"
        >
        </i>
      </button>
    </li>
  </ul>
</nav>
`;

exports[`VPagination.ts should only render end of range if value is equals "right" 1`] = `
<nav role="navigation"
     aria-label="Pagination Navigation"
>
  <ul class="v-pagination theme--light">
    <li>
      <button class="v-pagination__navigation"
              type="button"
              aria-label="Previous page"
      >
        <i class="v-icon notranslate mdi mdi-chevron-left theme--light"
           aria-hidden="true"
        >
        </i>
      </button>
    </li>
    <li>
      <button class="v-pagination__item"
              type="button"
              aria-current="false"
              aria-label="Goto Page 1"
      >
        1
      </button>
    </li>
    <li>
      <span class="v-pagination__more">
        ...
      </span>
    </li>
    <li>
      <button class="v-pagination__item v-pagination__item--active primary"
              type="button"
              aria-current="true"
              aria-label="Current Page, Page 98"
      >
        98
      </button>
    </li>
    <li>
      <button class="v-pagination__item"
              type="button"
              aria-current="false"
              aria-label="Goto Page 99"
      >
        99
      </button>
    </li>
    <li>
      <button class="v-pagination__item"
              type="button"
              aria-current="false"
              aria-label="Goto Page 100"
      >
        100
      </button>
    </li>
    <li>
      <button class="v-pagination__navigation"
              type="button"
              aria-label="Next page"
      >
        <i class="v-icon notranslate mdi mdi-chevron-right theme--light"
           aria-hidden="true"
        >
        </i>
      </button>
    </li>
  </ul>
</nav>
`;

exports[`VPagination.ts should only render middle of range if length is big and value is somewhere in the middle 1`] = `
<nav role="navigation"
     aria-label="Pagination Navigation"
>
  <ul class="v-pagination theme--light">
    <li>
      <button class="v-pagination__navigation"
              type="button"
              aria-label="Previous page"
      >
        <i class="v-icon notranslate mdi mdi-chevron-left theme--light"
           aria-hidden="true"
        >
        </i>
      </button>
    </li>
    <li>
      <button class="v-pagination__item"
              type="button"
              aria-current="false"
              aria-label="Goto Page 1"
      >
        1
      </button>
    </li>
    <li>
      <span class="v-pagination__more">
        ...
      </span>
    </li>
    <li>
      <button class="v-pagination__item v-pagination__item--active primary"
              type="button"
              aria-current="true"
              aria-label="Current Page, Page 50"
      >
        50
      </button>
    </li>
    <li>
      <span class="v-pagination__more">
        ...
      </span>
    </li>
    <li>
      <button class="v-pagination__item"
              type="button"
              aria-current="false"
              aria-label="Goto Page 100"
      >
        100
      </button>
    </li>
    <li>
      <button class="v-pagination__navigation"
              type="button"
              aria-label="Next page"
      >
        <i class="v-icon notranslate mdi mdi-chevron-right theme--light"
           aria-hidden="true"
        >
        </i>
      </button>
    </li>
  </ul>
</nav>
`;

exports[`VPagination.ts should only render start and end of range if length is big 1`] = `
<nav role="navigation"
     aria-label="Pagination Navigation"
>
  <ul class="v-pagination theme--light">
    <li>
      <button class="v-pagination__navigation v-pagination__navigation--disabled"
              disabled
              type="button"
              aria-label="Previous page"
      >
        <i class="v-icon notranslate mdi mdi-chevron-left theme--light"
           aria-hidden="true"
        >
        </i>
      </button>
    </li>
    <li>
      <button class="v-pagination__item v-pagination__item--active primary"
              type="button"
              aria-current="true"
              aria-label="Current Page, Page 1"
      >
        1
      </button>
    </li>
    <li>
      <button class="v-pagination__item"
              type="button"
              aria-current="false"
              aria-label="Goto Page 2"
      >
        2
      </button>
    </li>
    <li>
      <span class="v-pagination__more">
        ...
      </span>
    </li>
    <li>
      <button class="v-pagination__item"
              type="button"
              aria-current="false"
              aria-label="Goto Page 99"
      >
        99
      </button>
    </li>
    <li>
      <button class="v-pagination__item"
              type="button"
              aria-current="false"
              aria-label="Goto Page 100"
      >
        100
      </button>
    </li>
    <li>
      <button class="v-pagination__navigation"
              type="button"
              aria-label="Next page"
      >
        <i class="v-icon notranslate mdi mdi-chevron-right theme--light"
           aria-hidden="true"
        >
        </i>
      </button>
    </li>
  </ul>
</nav>
`;

exports[`VPagination.ts should only render start of range if value is equals "left" 1`] = `
<nav role="navigation"
     aria-label="Pagination Navigation"
>
  <ul class="v-pagination theme--light">
    <li>
      <button class="v-pagination__navigation"
              type="button"
              aria-label="Previous page"
      >
        <i class="v-icon notranslate mdi mdi-chevron-left theme--light"
           aria-hidden="true"
        >
        </i>
      </button>
    </li>
    <li>
      <button class="v-pagination__item"
              type="button"
              aria-current="false"
              aria-label="Goto Page 1"
      >
        1
      </button>
    </li>
    <li>
      <button class="v-pagination__item"
              type="button"
              aria-current="false"
              aria-label="Goto Page 2"
      >
        2
      </button>
    </li>
    <li>
      <button class="v-pagination__item v-pagination__item--active primary"
              type="button"
              aria-current="true"
              aria-label="Current Page, Page 3"
      >
        3
      </button>
    </li>
    <li>
      <span class="v-pagination__more">
        ...
      </span>
    </li>
    <li>
      <button class="v-pagination__item"
              type="button"
              aria-current="false"
              aria-label="Goto Page 100"
      >
        100
      </button>
    </li>
    <li>
      <button class="v-pagination__navigation"
              type="button"
              aria-label="Next page"
      >
        <i class="v-icon notranslate mdi mdi-chevron-right theme--light"
           aria-hidden="true"
        >
        </i>
      </button>
    </li>
  </ul>
</nav>
`;

exports[`VPagination.ts should render component in RTL mode and match snapshot 1`] = `
<nav role="navigation"
     aria-label="Pagination Navigation"
>
  <ul class="v-pagination theme--light">
    <li>
      <button class="v-pagination__navigation"
              type="button"
              aria-label="Previous page"
      >
        <i class="v-icon notranslate mdi mdi-chevron-right theme--light"
           aria-hidden="true"
        >
        </i>
      </button>
    </li>
    <li>
      <button class="v-pagination__item"
              type="button"
              aria-current="false"
              aria-label="Goto Page 1"
      >
        1
      </button>
    </li>
    <li>
      <button class="v-pagination__item v-pagination__item--active primary"
              type="button"
              aria-current="true"
              aria-label="Current Page, Page 2"
      >
        2
      </button>
    </li>
    <li>
      <button class="v-pagination__item"
              type="button"
              aria-current="false"
              aria-label="Goto Page 3"
      >
        3
      </button>
    </li>
    <li>
      <button class="v-pagination__item"
              type="button"
              aria-current="false"
              aria-label="Goto Page 4"
      >
        4
      </button>
    </li>
    <li>
      <button class="v-pagination__item"
              type="button"
              aria-current="false"
              aria-label="Goto Page 5"
      >
        5
      </button>
    </li>
    <li>
      <button class="v-pagination__navigation"
              type="button"
              aria-label="Next page"
      >
        <i class="v-icon notranslate mdi mdi-chevron-left theme--light"
           aria-hidden="true"
        >
        </i>
      </button>
    </li>
  </ul>
</nav>
`;

exports[`VPagination.ts should render disabled buttons with length equals to 0 1`] = `
<nav role="navigation"
     aria-label="Pagination Navigation"
>
  <ul class="v-pagination theme--light">
    <li>
      <button class="v-pagination__navigation v-pagination__navigation--disabled"
              disabled
              type="button"
              aria-label="Previous page"
      >
        <i class="v-icon notranslate mdi mdi-chevron-left theme--light"
           aria-hidden="true"
        >
        </i>
      </button>
    </li>
    <li>
      <button class="v-pagination__navigation v-pagination__navigation--disabled"
              disabled
              type="button"
              aria-label="Next page"
      >
        <i class="v-icon notranslate mdi mdi-chevron-right theme--light"
           aria-hidden="true"
        >
        </i>
      </button>
    </li>
  </ul>
</nav>
`;

exports[`VPagination.ts should use totalVisible prop if defined 1`] = `
<nav role="navigation"
     aria-label="Pagination Navigation"
>
  <ul class="v-pagination theme--light">
    <li>
      <button class="v-pagination__navigation"
              type="button"
              aria-label="Previous page"
      >
        <i class="v-icon notranslate mdi mdi-chevron-left theme--light"
           aria-hidden="true"
        >
        </i>
      </button>
    </li>
    <li>
      <button class="v-pagination__item"
              type="button"
              aria-current="false"
              aria-label="Goto Page 1"
      >
        1
      </button>
    </li>
    <li>
      <span class="v-pagination__more">
        ...
      </span>
    </li>
    <li>
      <button class="v-pagination__item"
              type="button"
              aria-current="false"
              aria-label="Goto Page 47"
      >
        47
      </button>
    </li>
    <li>
      <button class="v-pagination__item"
              type="button"
              aria-current="false"
              aria-label="Goto Page 48"
      >
        48
      </button>
    </li>
    <li>
      <button class="v-pagination__item"
              type="button"
              aria-current="false"
              aria-label="Goto Page 49"
      >
        49
      </button>
    </li>
    <li>
      <button class="v-pagination__item v-pagination__item--active primary"
              type="button"
              aria-current="true"
              aria-label="Current Page, Page 50"
      >
        50
      </button>
    </li>
    <li>
      <button class="v-pagination__item"
              type="button"
              aria-current="false"
              aria-label="Goto Page 51"
      >
        51
      </button>
    </li>
    <li>
      <button class="v-pagination__item"
              type="button"
              aria-current="false"
              aria-label="Goto Page 52"
      >
        52
      </button>
    </li>
    <li>
      <span class="v-pagination__more">
        ...
      </span>
    </li>
    <li>
      <button class="v-pagination__item"
              type="button"
              aria-current="false"
              aria-label="Goto Page 100"
      >
        100
      </button>
    </li>
    <li>
      <button class="v-pagination__navigation"
              type="button"
              aria-label="Next page"
      >
        <i class="v-icon notranslate mdi mdi-chevron-right theme--light"
           aria-hidden="true"
        >
        </i>
      </button>
    </li>
  </ul>
</nav>
`;
